--- a/server/assets/mail-templates/otpVerification.html
+++ b/server/assets/mail-templates/otpVerification.html
@@ -110,9 +110,10 @@
 
         <div class="email-content">
             <div class="thank-you-message">
-                <h1>OTP verification</h1>
+                <h1>OTP Verification</h1>
             </div>
-            <p>This is your OTP, don't share it with anyone. It expires in 10 minutes.</p>
+            <p>Dear {{userName}},</p>
+            <p>This is your OTP. Don't share it with anyone. It expires in 10 minutes.</p>
              <div class="cta-button">
                 <span class="otp">{{otp}}</span>
             </div>
